--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ paramiko>=2.7.1
 jsonschema==4.17.3
 requests>=2.27.0
 PyYAML>=6.0.0
-md-toc=8.2.0
+md-toc==8.2.0
 deepmerge>=1.1.0
 cryptography>=38.0.4
